[gd_scene load_steps=28 format=2]

[ext_resource path="res://enemies/booster/sprites/enemy4.png" type="Texture" id=1]
[ext_resource path="res://enemies/booster/sprites/enemy1.png" type="Texture" id=2]
[ext_resource path="res://enemies/booster/sprites/enemy2.png" type="Texture" id=3]
[ext_resource path="res://enemies/booster/sprites/enemy5.png" type="Texture" id=4]
[ext_resource path="res://enemies/BaseEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/booster/sprites/enemy3.png" type="Texture" id=6]
[ext_resource path="res://player/beams/sprites/trace_03.png" type="Texture" id=7]
[ext_resource path="res://player/beams/sprites/trace_01.png" type="Texture" id=8]
[ext_resource path="res://player/beams/sprites/trace_04.png" type="Texture" id=9]
[ext_resource path="res://player/beams/sprites/trace_02.png" type="Texture" id=10]
[ext_resource path="res://player/beams/sprites/flare_01.png" type="Texture" id=11]
[ext_resource path="res://enemies/booster/BoosterEnemy.gd" type="Script" id=12]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_5.png" type="Texture" id=13]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_6.png" type="Texture" id=14]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_7.png" type="Texture" id=15]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_3.png" type="Texture" id=16]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_1.png" type="Texture" id=17]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_2.png" type="Texture" id=18]
[ext_resource path="res://enemies/common/sprites/explosion_2/hits_5_4.png" type="Texture" id=19]
[ext_resource path="res://enemies/booster/sounds/booster_ship.wav" type="AudioStream" id=20]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.65 ), 0.0, 2.85626, 0, 0, Vector2( 0.597973, 0.35 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0613636 ), -5.11919, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
trail_divisor = 20
emission_shape = 2
emission_box_extents = Vector3( 22.02, 60, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 550.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.21
scale_curve = SubResource( 3 )

[sub_resource type="AnimatedTexture" id=5]
frames = 4
fps = 18.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 10 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 15.843, 49.022, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 7.39
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
angular_velocity = 15.17
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 47.5
damping = 15.74
scale = 0.03
scale_random = 0.2
scale_curve = SubResource( 3 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[node name="BoosterEnemy" instance=ExtResource( 5 )]
rotate = true
script = ExtResource( 12 )
health_points = 3
movement_speed = 1000.0

[node name="Trail" type="Particles2D" parent="." index="0"]
self_modulate = Color( 2.8, 2.8, 2, 1 )
show_behind_parent = true
position = Vector2( -42, 0.999999 )
rotation = -1.5708
amount = 140
lifetime = 0.87
process_material = SubResource( 4 )
texture = SubResource( 5 )

[node name="SmallParticles" type="Particles2D" parent="." index="1"]
self_modulate = Color( 2.8, 2.8, 2, 1 )
show_behind_parent = true
position = Vector2( -21, 1 )
rotation = -1.5708
amount = 48
lifetime = 1.5
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 11 )

[node name="AnimatedSprite" parent="." index="2"]
rotation = 3.14159
scale = Vector2( 2.3, 2.3 )
frames = SubResource( 1 )
playing = true

[node name="ExplosionAnimation" parent="." index="3"]
scale = Vector2( 4, 4 )
frames = SubResource( 7 )

[node name="Area2D" parent="." index="4"]
collision_layer = 18
collision_mask = 8

[node name="TimeToDisappear" type="Timer" parent="." index="6"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 20 )
volume_db = -1.44
autoplay = true

[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_ExplosionAnimation_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="TimeToDisappear" to="." method="_on_TimeToDisappear_timeout"]
